examples/tenant-with-autocert-and-ldap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      volumes:
        - name: billy-configuration
          configMap:
            name: billy-ldif
      containers:
        - name: openldap
          image: osixia/openldap:1.3.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 389
              name: tcp-ldap
            - containerPort: 636
              name: tcp-ldap2
          volumeMounts:
            - name: billy-configuration
              mountPath: /tmp/billy.ldif
              subPath: billy.ldif
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    name: openldap
spec:
  ports:
    - name: tcp-ldap
      port: 389
      targetPort: tcp-ldap
    - name: tcp-ldap2
      port: 636
      targetPort: tcp-ldap2
  selector:
    app: openldap
